[package]
name = "appname_basic_hook_example"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "0.6.0"
wasm-bindgen = "^0.2.50"
comp_state = "0.1.0"
comp_state_seed_extras = "0.0.3"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[dependencies.web-sys]
version = "0.3.35"
features = [
  'HtmlElement',
  'CssStyleDeclaration',
]


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
